# H2Lib

./: .coveralls.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README  README.md  h2lib.bib  keil2.msh  make.inc.unix_blas  make.inc.unix_noblas  make.inc.unix_opt  make.inc.unix_release  options.inc  options.inc.default  system.inc  system.inc.linux  system.inc.macos  system.inc.windows
Doc/: CMakeLists.txt  Doxyfile  customdoxygen.css  h2lib.sty
Examples/: example_amatrix_bem3d.c  example_dh2matrix.c  example_fem_p1_harith.c  example_fem_rt0_harith.c  example_h2matrix_bem3d.c  example_hmatrix_bem3d.c  example_visualize.c
Tests/: CMakeLists.txt  laplace_doublelayer_lindholm_c.c  test_amatrix.c  test_ddcluster.c  test_eigen.c  test_h2compression.c  test_h2matrix.c  test_helmholtzbem3d.c  test_helmholtzbem3d_dh2comp.c  test_helmholtzbem3d_ocl.c  test_hmatrix.c  test_kernelmatrix.c  test_krylov.c  test_krylovsolvers.c  test_laplacebem2d.c  test_laplacebem3d.c  test_laplacebem3d_ocl.c  test_tet3d.c  test_tet3dp1.c  test_tet3drt0.c  test_tri2d.c  test_tri2dp1.c  test_tri2drt0.c  testsuite.sh
